# TheShedResearch

./: .gitignore  BeginMsg.gd  BeginMsg.tscn  CrtFx.tscn  Exit.gd  FlyHeart.gd  FlyHeart.tscn  GameOver.gd  Heart.gd  LvlMessage.tscn  Main.OLD  Main.gd  Main.tscn  Musicians.gd  NoteExpirationTimer.tscn  README.md  SaveScore.gd  SaveScore.tscn  ScoreTooltip.tscn  StarsBg.gd  StarsBg.tscn  TitleScreen.gd  Top5Wrapper.tscn  arrow.gd  arrow_hollow.png.import  assets.gd  crt.tscn  drum.gd  drum.tscn  gitcommit.sh  glow.png.import  note.gd  project.godot  scoreRecord.json
.import/: 5C.ogg-4e04382545cf811e3571c3ddf25383e8.md5  5D.ogg-50cea45026e741436c37debf7cf8d333.md5  5F.ogg-b104f62d6ffbd8b2400c82183acbb702.md5  5G.ogg-f79d69eb3ad361b4a958cb763bc7326c.md5  6A.ogg-e1f7772d7e04ed2d8a5b11b857e1e152.md5  ArrowMegaUp.png-9c0bf4b4d8277b6c4dbdd637b2dbea66.md5  ArrowMegaUp.png-9c0bf4b4d8277b6c4dbdd637b2dbea66.stex  ArrowMegaUpPressed.png-2303ace7fea8d548db17eef906a9449b.md5  ArrowMegaUpPressed.png-2303ace7fea8d548db17eef906a9449b.stex  Backing Track.ogg-6274ff4d34c84ff308c77a420b3bc513.md5  Backing Track.ogg-6274ff4d34c84ff308c77a420b3bc513.oggstr  BassistBodyAlienT4.png-37812dda0015f22299008c1dff3abed4.md5  BassistBodyAlienT4.png-37812dda0015f22299008c1dff3abed4.stex  BassistBodyDarkBrown.png-658a4709c769cb2cbecef391d7f1bcf6.md5  BassistBodyDarkBrown.png-658a4709c769cb2cbecef391d7f1bcf6.stex  (+307 more)
TheShed/: Exit.gd  (+37 more)
nft-detection-rs/: Cargo.toml
nft-detection-rs/nft-detection/: Cargo.toml
nft-detection-rs/nft-detection/src/: lib.rs  nft_detection.rs
nft-detection-rs/src/: lib.rs
(+154 files in other folders)
