[package]
name = "nft-detection-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.26"
solana-sdk = "1.10.26"
solana-account-decoder = "1.10.26"
spl-token = "3.3.0"
mpl-token-metadata = "1.3.0"
anyhow = "1.0.58"
serde_json = "1.0.81"

[[bin]]
name = "nft-detection"

