[package]
name = "nft-detection-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft-detection = { path = "nft-detection" }

clap = { version = "3.2.6", features = ["cargo"] }

[[bin]]
name = "nft-detection"

[workspace]
members = [
    "nft-detection",
]
